style.css
/* ... */
.logo {
  display: inline;
  flex-direction: row;
  text-align: center;
}
.logo .nav-branding {
  font-family: aquire;
  display: inline-block;
  font-size: 1.6rem;
  /* padding: 4px; */
  font-weight: bold;
  background: linear-gradient(to right, rgb(78, 78, 244), rgb(72, 231, 245));
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  display: none;
}
.nav-link {
  font-family: aquire;
  padding: 20px 10px;
  transition: 0.2s ease;
  font-size: 1.1rem;
  font-weight: bold;
  color: #ffffff;
  position: relative;
}
.nav-link:hover {
  /* color: black; */
  border-radius: 5px;
}
.nav-item i {
  color: #fff;
}
.nav-link::before {
  content: "";
  position: absolute;
  left: 0;
  top: 45px;
  width: 100%;
  height: 4px;
  background: rgb(25, 198, 198);
  z-index: -1;
  transition: transform 0.5s;
  transform-origin: 0 0;
  transition-timing-function: cubic-bezier(0.5, 1.6, 0.4, 0.7);
}
.nav-link::before {
  transform: scaleX(0);
}
.nav-link:hover::before {
  transform: scaleX(1);
}
.checkbtn {
  color: aqua;
  font-size: 50px;
  float: right;
  /* line-height: 50px; */
  /* margin-top: 10px; */
  margin-right: 30px;
  cursor: pointer;
  display: none;
}
#check {
  display: none;
}
.bar {
  display: block;
  width: 30px;
  height: 3px;
  margin: 5px;
  -webkit-transition: all 0.5s ease-in-out;
  transition: all 0.4s ease-in-out;
  background-color: #3cd3e7;
}

@media (max-width: 990px) {
  .logo .nav-branding {
    display: block;
  }
  .checkbtn {
    display: block;
    margin: 8px 0;
    align-items: flex-end;
  }
  .checkbtn.active .bar:nth-child(2) {
    opacity: 0;
  }
  .checkbtn.active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }
  .checkbtn.active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }
  #check:checked ~ .nav-menu {
    left: 0;
  }

  .nav-branding {
    font-size: 1.8rem;
    margin: 12px;
  }
  .navbar {
    min-height: 35px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }
  .nav-menu {
    position: fixed;
    left: -100%;
    top: 60px;
    gap: 0;
    flex-direction: column;
    background-color: #181524;
    width: 100vw;
    text-align: center;
    transition: 0.3s;
  }
  .nav-item {
    margin: 14px 0;
  }
  .nav-menu:checked .nav-link:active {
    left: -100%;
  }
}
/* close nav sec */

/* home sec */
.home {
  height: 100vh;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background: rgb(0, 0, 0);
  /* -webkit-animation: color-change-3x 4s linear infinite alternate both;
  animation: color-change-3x 4s linear infinite alternate both; */
}
.home .greet {
  font-weight: bold;
  color: white;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  flex-direction: column;
}
.home .greet h1 {
  font-family: aquire;
  padding: 5px 18px;
  background: linear-gradient(to right, rgb(39, 105, 116), rgb(68, 139, 244));
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  padding-bottom: 20px;
  font-size: 65px;
  font-weight: bold;
}
.home .greet h3 {
  font-family: aquire;
  padding: 5px 18px;
  /* background: linear-gradient(to right, rgb(1, 179, 210), rgb(0, 99, 247));
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent; */
  color: white;
  padding-bottom: 12px;
  font-size: 30px;
  font-weight: bold;
}
.home .greet h1:nth-child(1),
.home .greet h1:nth-child(3) {
  font-size: 30px;
  padding: 18px;
}
.home .greet p {
  font-size: 20px;
  padding: 10px 18px;
  font-family: "Poppins", sans-serif;
  line-height: 30px;
}
.greet .home-socials {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 12px 14px;
  /* margin: 10px 18px; */
  border-radius: 10px;
  width: fit-content;
}
.home .greet a {
  font-size: 40px;
  padding-right: 20px;
  transition: 0.3s ease;
}

@-webkit-keyframes color-change-3x {
  0% {
    background: #30bbc8;
  }
  50% {
    background: #4052d7;
  }
  100% {
    background: #22929e;
  }
}
@keyframes color-change-3x {
  0% {
    background: #1a575c;
  }
  50% {
    background: #682cff;
  }
  100% {
    background: #063c42;
  }
}
@media (max-width: 990px) {
  .home .greet h3 {
    font-size: 22px;
  }
  .home .greet h1 {
    font-size: 49px;
  }
}
@media (max-width: 480px) {
  .home .greet h3 {
    font-size: 22px;
  }
  .home .greet h1 {
    font-size: 35px;
  }
}

/* end home sec */

/* About sec */
.about {
  background: rgb(13, 12, 32);
  /* height: 100vh; */
  width: 100%;
  display: flex;
  /* padding: 10px 0; */
}
.about .about-me {
  flex: 1 1 450px;
  display: flex;
  justify-content: center;
  align-items: start;
  flex-direction: column;
  border-radius: 15px;
}
.about .about-me h1 {
  font-family: aquire;
  font-size: 35px;
  font-weight: bold;
  margin: 24px;
  padding: 5px;
  background: linear-gradient(to right, rgb(57, 57, 218), rgb(24, 220, 238));
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}
.about .about-me p {
  font-family: "Poppins", sans-serif;
  text-transform: none;
  gap: 20px;
  line-height: 1.4;
  font-size: 21px;
  font-weight: 400;
  padding: 5px;
  margin: 10px 24px;
  color: rgb(255, 255, 255);
}
.about .about-me h2 {
  width: fit-content;
  font-family: aquire;
  font-size: 32px;
  font-weight: bold;
  margin: 30px 10px;
  background: linear-gradient(to right, rgb(57, 57, 218), rgb(24, 220, 238));
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}
.about-me .buttons {
  display: flex;
  justify-content: center;
  align-items: center;
}
.about-me a {
  padding: 12px 24px;
  border-radius: 4px;
  font-family: aquire;
  font-size: 19px;
  border: 2px solid aqua;
  margin: 22px 24px;
  color: rgb(0, 221, 255);
  font-weight: bold;
  transition: 0.3s ease;
}
/* ... */

